Add redis cache & swagger docs
